test/language/errors/errors_comparisons.hm
# comparison '>' error: expected numbers but found a boolean and integer
# comparison '>' error: expected numbers but found an integer and boolean
# comparison '<' error: expected numbers but found a boolean and integer
# comparison '<' error: expected numbers but found an integer and boolean
# comparison '>=' error: expected numbers but found a boolean and integer
# comparison '>=' error: expected numbers but found an integer and boolean
# comparison '<=' error: expected numbers but found a boolean and integer
# comparison '<=' error: expected numbers but found an integer and boolean

use "errors"

try { false > 2 } except e { echo runtime(e) }
try { 2 > false } except e { echo runtime(e) }

try { false < 2 } except e { echo runtime(e) }
try { 2 < false } except e { echo runtime(e) }

try { false >= 2 } except e { echo runtime(e) }
try { 2 >= false } except e { echo runtime(e) }

try { false <= 2 } except e { echo runtime(e) }
try { 2 <= false } except e { echo runtime(e) }
